hphp/hack/test/typecheck/fc_enum_9.php.like_types.exp
File "fc_enum_9.php", line 13, characters 10-25:
Invalid return type (Typing[4110])
File "fc_enum_9.php", line 12, characters 41-43:
Expected ~int because it is an unenforceable type
File "fc_enum_9.php", line 3, characters 6-8:
But got Foo
File "BuiltinEnum.hhi", line 34, characters 60-60:
  via this generic T
